# gestalt

./: .dockerignore  .gitignore  .golangci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.gestaltd  Makefile  README.md  docker-compose.yml  gestalt.dev.yaml  go.mod  go.sum  toolshed.dev.yaml
.githooks/: pre-push
.github/: dependabot.yml
.github/scripts/: generate-release-notes.py  generate-release-notes.sh  normalize-python-sdk-version.py  rebuild-apt-repo.sh
.github/workflows/: build-apt-packages.yml  build-gestalt-cli.yml  build-gestalt-server.yml  build-gestalt.yml  build-gestaltd.yml  build-go-sdk.yml  build-python-sdk.yml  build-rust-sdk.yml  build-sdk-go.yml  build-toolshed-cli.yml  build-toolshed.yml  build-typescript-sdk.yml  datastore-integration.yml  deploy-gestalt-docs.yml  deploy-gestalt-server.yml  deploy-gestaltd.yml  deploy-toolshed-docs.yml  deploy-toolshed.yml  publish-apt-repo.yml  publish-dockerhub-image.yml  publish-gestalt-image.yml  publish-gestalt-server-image.yml  publish-gestaltd-image.yml  publish-scoped-github-release.yml  publish-toolshed-image.yml  release-gestalt-cli.yml  release-gestaltd.yml  release-plugin-reusable.yml  (+8 more)
Formula/: gestalt.rb  gestaltd.rb  toolshed.rb
client/: Cargo.toml  Dockerfile
client/cli/: Cargo.toml
client/cli/src/: api.rs  catalog.rs  cli.rs  config.rs  credentials.rs  lib.rs  main.rs  output.rs  params.rs
client/cli/src/commands/: auth.rs  config.rs  describe.rs  health.rs  init.rs  integrations.rs  invoke.rs  mod.rs  tokens.rs
client/cli/tests/: functional.rs  integration.rs  live_cli.rs
client/cli/tests/support/: mod.rs
core/: audit.go  auth.go  binding.go  broker.go  capability.go  chat_types.go  chatstore.go  connection.go  datastore.go  errors.go  http.go  integration.go  provider.go  runtime.go  secrets.go  telemetry.go  types.go
docs/: Dockerfile  auth.md  globals.css  integrations.md  mdx-components.tsx  next.config.mjs  package-lock.json  package.json  playwright.config.ts  theme.config.tsx  tsconfig.json
gestalt/: Cargo.toml  Dockerfile
gestalt/cli/: Cargo.toml
gestalt/cli/src/: api.rs  catalog.rs  cli.rs  config.rs  credentials.rs  http.rs  interactive.rs  lib.rs  main.rs  output.rs  params.rs  paths.rs
gestalt/cli/src/commands/: agents.rs  auth.rs  describe.rs  identities.rs  init.rs  integrations.rs  invoke.rs  mod.rs  plugins.rs  tokens.rs  workflows.rs
gestalt/cli/src/commands/agents/: display_markdown.rs  tui.rs
gestalt/cli/src/commands/agents/tui/: state.rs  worker.rs
gestalt/cli/src/commands/plugins/: connect.rs
gestalt/cli/tests/: agents_cli.rs  auth_flow.rs  config_resolution.rs  identities_cli.rs  integration.rs  invoke_contract.rs  plugins_connect.rs  tokens_cli.rs  workflows_cli.rs
gestalt/cli/tests/support/: mod.rs
gestaltd/: .gitignore  .golangci.yml  Dockerfile  Dockerfile.debian  Dockerfile.scratch  go.mod  go.sum
sandbox/: main.py  pyproject.toml  service.py  tools.py
scripts/: check-functional-tests.sh  generate-pluginapi.sh  release-sdk.sh  verify-external-authoring.sh
sdk/plugin/python/: README.md  gestalt_plugin.py  pyproject.toml
sdk/plugin/python/examples/: echo_provider.py
sdk/plugin/python/gestalt_plugin/: __init__.py  _proto.py  provider.py  runtime.py  types.py
sdk/python/: README.md  pyproject.toml
sdk/python/docs/: conf.py  index.rst  reference.rst
sdk/python/gestalt/: __init__.py  _agent.py  _api.py  _authentication.py  _authorization.py  _bootstrap.py  _build.py  _cache.py  _catalog.py  _catalog_helpers.py  _fileapi.py  _grpc_transport.py  _http_subject.py  _indexeddb.py  _invoker.py  _manifest.py  _manifest_metadata.py  _operations.py  _optional_imports.py  _plugin.py  _providers.py  _pyinstaller.py  _resource.py  _runtime.py  _runtime_log_host.py  _s3.py  _serialization.py  _telemetry.py  _typing_utils.py  _workflow.py  telemetry.py
sdk/python/gestalt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sdk/python/gestalt/_gen/v1/: __init__.py  agent_pb2.py  agent_pb2_grpc.py  authentication_pb2.py  authentication_pb2_grpc.py  authorization_pb2.py  authorization_pb2_grpc.py  cache_pb2.py  cache_pb2_grpc.py  datastore_pb2.py  datastore_pb2_grpc.py  plugin_pb2.py  pluginruntime_pb2.py  pluginruntime_pb2_grpc.py  runtime_pb2.py  s3_pb2.py  s3_pb2_grpc.py  secrets_pb2.py  workflow_pb2.py  workflow_pb2_grpc.py
sdk/python/scripts/: generate_stubs.py
sdk/python/tests/: test_agent_transport.py  test_authorization_transport.py  test_build.py  test_cache_transport.py  test_components.py  test_fileapi_transport.py  test_generate_stubs.py  test_indexeddb_cursor_unit.py  test_indexeddb_transport.py  test_operations.py  test_plugin.py  test_plugin_invoker_transport.py  test_runtime.py  test_runtime_log_host.py  test_s3_transport.py  test_serialization.py  test_telemetry.py  test_workflow_transport.py
sdk/rust/: Cargo.toml  README.md  build.rs
sdk/rust/scripts/: generate_stubs.sh
sdk/rust/src/: agent.rs  agent_manager.rs  api.rs  auth.rs  auth_server.rs  cache.rs  cache_server.rs  catalog.rs  datastore.rs  datastore_server.rs  env.rs  error.rs  fileapi.rs  fileapi_server.rs  generated.rs  indexeddb.rs  invoker.rs  lib.rs  manifest.rs  manifest_metadata.rs  plugin_runtime.rs  provider_server.rs  resource.rs  router.rs  rpc_status.rs  runtime.rs  runtime_log_host.rs  runtime_server.rs  runtime_types.rs  s3.rs  secrets.rs  secrets_server.rs  telemetry.rs  workflow.rs  workflow_manager.rs
sdk/rust/tests/: agent_manager_transport.rs  agent_transport.rs  cache_transport.rs  codegen.rs  component_transport.rs  export_macros.rs  fileapi_component_transport.rs  fileapi_transport.rs  helpers.rs  indexeddb_transport.rs  plugin_invoker_transport.rs  provider_server.rs  router.rs  runtime_log_host_transport.rs  s3_transport.rs  transport.rs  workflow_manager_transport.rs  workflow_transport.rs
sdk/rust/tests/support/: fileapi_testutil.rs
server/: Dockerfile  go.mod  go.sum
web/: .gitignore  Dockerfile  dev.sh  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
(+2568 files in other folders)
