[package]
name = "gestalt"
description = "CLI for Gestalt API - authentication, integration management, and operation invocation"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gestalt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["blocking", "json", "native-tls-vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
colored = "3"
anyhow = "1"
open = "5"
url = "2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
