[package]
name = "gestalt"
description = "CLI for the Gestalt API: authentication, integrations, workflows, and interactive agents"
version.workspace = true
edition.workspace = true

[[bin]]
name = "gestalt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", default-features = false, features = ["blocking", "cookies", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
dirs = "6"
colored = "3"
anyhow = "1"
open = "5"
terminal_size = "0.4.4"
url = "2"
getrandom = "0.4"
comfy-table = { version = "7.2.1", default-features = false }
rpassword = "7"
time = { version = "0.3", features = ["parsing"] }
rustyline = "18"
ctrlc = "3"
crossterm = "0.29"
ratatui = { version = "0.30", features = ["crossterm_0_29"] }
ratatui-textarea = "0.9"
unicode-segmentation = "1.13.2"
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3"
mockito = "1"
assert_cmd = "2"
predicates = "3"
portable-pty = "0.9"
