[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gestalt"
version = "0.0.1a1"
description = "Python SDK for Gestalt executable provider plugins"
requires-python = ">=3.10"
dependencies = [
  "grpcio<2",
  "pyinstaller<7",
  "protobuf>=7.34.1,<8",
]

[tool.setuptools.packages.find]
include = ["gestalt*"]
