[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "gestalt"
version = "0.0.1a1"
description = "Python SDK for Gestalt executable provider plugins"
requires-python = ">=3.10"
dependencies = [
  "grpcio>=1.80.0,<2",
  "pyyaml==6.0.3",
  "pyinstaller<7",
  "protobuf>=6.33.1,<8",
]

[tool.setuptools.packages.find]
include = ["gestalt*"]
