[package]
name = "gestalt_plugin_sdk"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Rust SDK scaffolding and generated protocol bindings for Gestalt provider plugins"
readme = "README.md"
repository = "https://github.com/valon-technologies/gestalt"
keywords = ["gestalt", "grpc", "protobuf", "sdk"]
categories = ["api-bindings", "development-tools"]

[dependencies]
async-trait = "0.1"
http = "0.2"
libc = "0.2"
prost = "0.12"
prost-types = "0.12"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.11", features = ["transport"] }

[build-dependencies]
prost-build = "0.12"
protoc-bin-vendored = "3"
tonic-build = "0.11"

[dev-dependencies]
tower = "0.4"
