[package]
name = "gestalt_plugin_sdk"
version = "0.0.1-alpha.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Rust SDK scaffolding and generated protocol bindings for Gestalt executable providers"
readme = "README.md"
repository = "https://github.com/valon-technologies/gestalt"
keywords = ["gestalt", "grpc", "protobuf", "sdk"]
categories = ["api-bindings", "development-tools"]

[dependencies]
libc = "0.2"
prost = "0.14"
prost-types = "0.14"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"

[build-dependencies]
prost-build = "0.14"
protoc-bin-vendored = "3"
tonic-build = "0.14"
tonic-prost-build = "0.14"

[dev-dependencies]
hyper-util = "0.1.20"
tower = "0.5"
